--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ language: python
 cache:
   apt: true
   directories:
-    - $HOME/.npm
+    - $HOME/virtualenv/python2.6/lib/python2.6/site-packages/
+    - $HOME/virtualenv/python2.7/lib/python2.7/site-packages/
     - $HOME/.nvm
-    - $HOME/virtualenv
 python:
   - "2.6"
   - "2.7"
